Bug 100796 - two finger tap release event has the same timestamp as the press event
Summary: two finger tap release event has the same timestamp as the press event
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: libinput (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-26 10:58 UTC by Mildred Ki'Lya
Modified: 2017-05-04 02:39 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Mildred Ki'Lya 2017-04-26 10:58:24 UTC
Using libinpt 1.6.3-3 on Fedora 25 x86_64 with GNOME, I have an issue with the right click behaviour using the two finder tap.

With single finder tap, the left click press and release events have different and increasing timestamps. This is the expected behaviour.

With two finder tap, right click the press and release events have both the same timestamp. This can lead to application having difficulties ordering the press and release events.

This can be found using the xev program.

Most programs seems to handle this correctly, however there are some programs, such as old windows programs running with wine that can have difficulties handling this. See https://bugs.winehq.org/show_bug.cgi?id=42897

The correct behaviour is to have two finder tap release events have a different timestamp than the press event, light for left click

The touchpad configuration is:

INS mildred@elayna:~$ DISPLAY=:0 xinput list-props 10
Device 'Elan Touchpad':
	Device Enabled (139):	1
	Coordinate Transformation Matrix (141):	1.000000, 0.000000, 0.000000, 0.000000, 1.000000, 0.000000, 0.000000, 0.000000, 1.000000
	libinput Tapping Enabled (281):	1
	libinput Tapping Enabled Default (282):	0
	libinput Tapping Drag Enabled (283):	1
	libinput Tapping Drag Enabled Default (284):	1
	libinput Tapping Drag Lock Enabled (285):	0
	libinput Tapping Drag Lock Enabled Default (286):	0
	libinput Tapping Button Mapping Enabled (287):	1, 0
	libinput Tapping Button Mapping Default (288):	1, 0
	libinput Accel Speed (289):	0.000000
	libinput Accel Speed Default (290):	0.000000
	libinput Natural Scrolling Enabled (291):	0
	libinput Natural Scrolling Enabled Default (292):	0
	libinput Send Events Modes Available (262):	1, 1
	libinput Send Events Mode Enabled (263):	0, 0
	libinput Send Events Mode Enabled Default (264):	0, 0
	libinput Left Handed Enabled (293):	0
	libinput Left Handed Enabled Default (294):	0
	libinput Scroll Methods Available (295):	1, 1, 0
	libinput Scroll Method Enabled (296):	1, 0, 0
	libinput Scroll Method Enabled Default (297):	1, 0, 0
	libinput Click Methods Available (298):	1, 1
	libinput Click Method Enabled (299):	1, 0
	libinput Click Method Enabled Default (300):	1, 0
	libinput Middle Emulation Enabled (301):	0
	libinput Middle Emulation Enabled Default (302):	0
	libinput Disable While Typing Enabled (303):	1
	libinput Disable While Typing Enabled Default (304):	1
	Device Node (265):	"/dev/input/event5"
	Device Product ID (266):	1267, 42
	libinput Drag Lock Buttons (305):	<no items>
	libinput Horizontal Scroll Enabled (306):	1
Comment 1 Mildred Ki'Lya 2017-04-26 11:00:43 UTC
For information, the left click events shows a time difference of 200 milliseconds(?)
Comment 3 Peter Hutterer 2017-05-04 02:39:39 UTC
commits leading up to

commit 691aea6d060834f233c6fb29d81b1e9610728545
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Fri Apr 28 14:51:06 2017 +1000

    touchpad: for 2/3-finger tap, use the last finger down as press time


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.