test/test-touchpad-tap.c
@@ -916,6 +916,9 @@ START_TEST(touchpad_2fg_tap)
 	struct libinput *li = dev->libinput;
 	enum libinput_config_tap_button_map map = _i; /* ranged test */
 	unsigned int button = 0;
+	struct libinput_event *ev;
+	struct libinput_event_pointer *ptrev;
+	uint64_t ptime, rtime;
 
 	litest_enable_tap(dev->libinput_device);
 	litest_set_tap_map(dev->libinput_device, map);
@@ -940,11 +943,20 @@ START_TEST(touchpad_2fg_tap)
 
 	libinput_dispatch(li);
 
-	litest_assert_button_event(li, button,
-				   LIBINPUT_BUTTON_STATE_PRESSED);
-	litest_timeout_tap();
-	litest_assert_button_event(li, button,
-				   LIBINPUT_BUTTON_STATE_RELEASED);
+	ev = libinput_get_event(li);
+	ptrev = litest_is_button_event(ev,
+				       button,
+				       LIBINPUT_BUTTON_STATE_PRESSED);
+	ptime = libinput_event_pointer_get_time_usec(ptrev);
+	libinput_event_destroy(ev);
+	ev = libinput_get_event(li);
+	ptrev = litest_is_button_event(ev,
+				       button,
+				       LIBINPUT_BUTTON_STATE_RELEASED);
+	rtime = libinput_event_pointer_get_time_usec(ptrev);
+	libinput_event_destroy(ev);
+
+	ck_assert_int_lt(ptime, rtime);
 
 	litest_assert_empty_queue(li);
 }
@@ -956,6 +968,9 @@ START_TEST(touchpad_2fg_tap_inverted)
 	struct libinput *li = dev->libinput;
 	enum libinput_config_tap_button_map map = _i; /* ranged test */
 	unsigned int button = 0;
+	struct libinput_event *ev;
+	struct libinput_event_pointer *ptrev;
+	uint64_t ptime, rtime;
 
 	litest_enable_tap(dev->libinput_device);
 	litest_set_tap_map(dev->libinput_device, map);
@@ -980,11 +995,20 @@ START_TEST(touchpad_2fg_tap_inverted)
 
 	libinput_dispatch(li);
 
-	litest_assert_button_event(li, button,
-				   LIBINPUT_BUTTON_STATE_PRESSED);
-	litest_timeout_tap();
-	litest_assert_button_event(li, button,
-				   LIBINPUT_BUTTON_STATE_RELEASED);
+	ev = libinput_get_event(li);
+	ptrev = litest_is_button_event(ev,
+				       button,
+				       LIBINPUT_BUTTON_STATE_PRESSED);
+	ptime = libinput_event_pointer_get_time_usec(ptrev);
+	libinput_event_destroy(ev);
+	ev = libinput_get_event(li);
+	ptrev = litest_is_button_event(ev,
+				       button,
+				       LIBINPUT_BUTTON_STATE_RELEASED);
+	rtime = libinput_event_pointer_get_time_usec(ptrev);
+	libinput_event_destroy(ev);
+
+	ck_assert_int_lt(ptime, rtime);
 
 	litest_assert_empty_queue(li);
 }
@@ -1379,6 +1403,10 @@ START_TEST(touchpad_3fg_tap)
 	}
 
 	for (i = 0; i < 3; i++) {
+		uint64_t ptime, rtime;
+		struct libinput_event *ev;
+		struct libinput_event_pointer *ptrev;
+
 		litest_drain_events(li);
 
 		litest_touch_down(dev, 0, 50, 50);
@@ -1391,13 +1419,21 @@ START_TEST(touchpad_3fg_tap)
 
 		libinput_dispatch(li);
 
-		litest_assert_button_event(li, button,
-					   LIBINPUT_BUTTON_STATE_PRESSED);
-		litest_timeout_tap();
-		litest_assert_button_event(li, button,
-					   LIBINPUT_BUTTON_STATE_RELEASED);
+		ev = libinput_get_event(li);
+		ptrev = litest_is_button_event(ev,
+					       button,
+					       LIBINPUT_BUTTON_STATE_PRESSED);
+		ptime = libinput_event_pointer_get_time_usec(ptrev);
+		libinput_event_destroy(ev);
+		ev = libinput_get_event(li);
+		ptrev = litest_is_button_event(ev,
+					       button,
+					       LIBINPUT_BUTTON_STATE_RELEASED);
+		rtime = libinput_event_pointer_get_time_usec(ptrev);
+		libinput_event_destroy(ev);
 
-		litest_assert_empty_queue(li);
+		ck_assert_int_lt(ptime, rtime);
+
 	}
 }
 END_TEST
